frb_rust/src/dart_api_dl/include/dart_api.h


typedef struct _Dart_Handle* Dart_Handle;
typedef int64_t Dart_Port;
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle Dart_HandleMessage(void);
DART_EXPORT DART_WARN_UNUSED_RESULT Dart_Handle Dart_RunLoop(void);
DART_EXPORT Dart_Port Dart_GetMainPortId(void);
DART_EXPORT bool Dart_HasLivePorts(void);
DART_EXPORT bool Dart_Post(Dart_Port port_id, Dart_Handle object);
DART_EXPORT Dart_Handle Dart_NewSendPort(Dart_Port port_id);
DART_EXPORT Dart_Handle Dart_SendPortGetId(Dart_Handle port,
                                           Dart_Port* port_id);
DART_EXPORT void Dart_EnterScope(void);
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT uint8_t* Dart_ScopeAllocate(intptr_t size);
DART_EXPORT Dart_Handle Dart_Null(void);
DART_EXPORT bool Dart_IsNull(Dart_Handle object);
DART_EXPORT Dart_Handle Dart_EmptyString(void);
DART_EXPORT Dart_Handle Dart_ObjectEquals(Dart_Handle obj1,
                                          Dart_Handle obj2,
                                          bool* equal);
DART_EXPORT Dart_Handle Dart_ObjectIsType(Dart_Handle object,
                                          Dart_Handle type,
                                          bool* instanceof);
DART_EXPORT bool Dart_IsInstance(Dart_Handle object);
DART_EXPORT bool Dart_IsNumber(Dart_Handle object);
DART_EXPORT bool Dart_IsInteger(Dart_Handle object);
DART_EXPORT bool Dart_IsDouble(Dart_Handle object);
DART_EXPORT bool Dart_IsBoolean(Dart_Handle object);
DART_EXPORT bool Dart_IsString(Dart_Handle object);
DART_EXPORT bool Dart_IsStringLatin1(Dart_Handle object); 
DART_EXPORT bool Dart_IsExternalString(Dart_Handle object);
DART_EXPORT bool Dart_IsList(Dart_Handle object);
DART_EXPORT bool Dart_IsMap(Dart_Handle object);
DART_EXPORT bool Dart_IsLibrary(Dart_Handle object);
DART_EXPORT bool Dart_IsType(Dart_Handle handle);
DART_EXPORT bool Dart_IsFunction(Dart_Handle handle);
DART_EXPORT bool Dart_IsVariable(Dart_Handle handle);
DART_EXPORT bool Dart_IsTypeVariable(Dart_Handle handle);
DART_EXPORT bool Dart_IsClosure(Dart_Handle object);
DART_EXPORT bool Dart_IsTypedData(Dart_Handle object);
DART_EXPORT bool Dart_IsByteBuffer(Dart_Handle object);
DART_EXPORT bool Dart_IsFuture(Dart_Handle object);
DART_EXPORT Dart_Handle Dart_InstanceGetType(Dart_Handle instance);
DART_EXPORT Dart_Handle Dart_ClassName(Dart_Handle cls_type);
DART_EXPORT Dart_Handle Dart_FunctionName(Dart_Handle function);
DART_EXPORT Dart_Handle Dart_FunctionOwner(Dart_Handle function);
DART_EXPORT Dart_Handle Dart_FunctionIsStatic(Dart_Handle function,
                                              bool* is_static);
DART_EXPORT bool Dart_IsTearOff(Dart_Handle object);
DART_EXPORT Dart_Handle Dart_ClosureFunction(Dart_Handle closure);
DART_EXPORT Dart_Handle Dart_ClassLibrary(Dart_Handle cls_type);
DART_EXPORT Dart_Handle Dart_IntegerFitsIntoInt64(Dart_Handle integer,
                                                  bool* fits);
DART_EXPORT Dart_Handle Dart_IntegerFitsIntoUint64(Dart_Handle integer,
                                                   bool* fits);