dart_sys/src/lib.rs


extern "C" {
    #[doc = " Processes any incoming messages for the current isolate."]
    #[doc = ""]
    #[doc = " This function may only be used when the embedder has not provided"]
    #[doc = " an alternate message delivery mechanism with"]
    #[doc = " Dart_SetMessageCallbacks. It is provided for convenience."]
    #[doc = ""]
    #[doc = " This function waits for incoming messages for the current"]
    #[doc = " isolate. As new messages arrive, they are handled using"]
    #[doc = " Dart_HandleMessage. The routine exits when all ports to the"]
    #[doc = " current isolate are closed."]
    #[doc = ""]
    #[doc = " \\return A valid handle if the run loop exited successfully.  If an"]
    #[doc = "   exception or other error occurs while processing messages, an"]
    #[doc = "   error handle is returned."]
    pub fn Dart_RunLoop() -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the main port id for the current isolate."]
    pub fn Dart_GetMainPortId() -> Dart_Port;
}

extern "C" {
    #[doc = " Does the current isolate have live ReceivePorts?"]
    #[doc = ""]
    #[doc = " A ReceivePort is live when it has not been closed."]
    pub fn Dart_HasLivePorts() -> bool;
}

extern "C" {
    #[doc = " Posts a message for some isolate. The message is a serialized"]
    #[doc = " object."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    #[doc = ""]
    #[doc = " \\param port The destination port."]
    #[doc = " \\param object An object from the current isolate."]
    #[doc = ""]
    #[doc = " \\return True if the message was posted."]
    pub fn Dart_Post(port_id: Dart_Port, object: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Returns a new SendPort with the provided port id."]
    #[doc = ""]
    #[doc = " \\param port_id The destination port."]
    #[doc = ""]
    #[doc = " \\return A new SendPort if no errors occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_NewSendPort(port_id: Dart_Port) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the SendPort id for the provided SendPort."]
    #[doc = " \\param port A SendPort object whose id is desired."]
    #[doc = " \\param port_id Returns the id of the SendPort."]
    #[doc = " \\return Success if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_SendPortGetId(port: Dart_Handle, port_id: *mut Dart_Port) -> Dart_Handle;
}

extern "C" {
    #[doc = " Enters a new scope."]
    #[doc = ""]
    #[doc = " All new local handles will be created in this scope. Additionally,"]
    #[doc = " some functions may return \"scope allocated\" memory which is only"]
    #[doc = " valid within this scope."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_EnterScope();
}

extern "C" {
    #[doc = " Exits a scope."]
    #[doc = ""]
    #[doc = " The previous scope (if any) becomes the current scope."]
    #[doc = ""]
    #[doc = " Requires there to be a current isolate."]
    pub fn Dart_ExitScope();
}

extern "C" {
    #[doc = " The Dart VM uses \"zone allocation\" for temporary structures. Zones"]
    #[doc = " support very fast allocation of small chunks of memory. The chunks"]
    #[doc = " cannot be deallocated individually, but instead zones support"]
    #[doc = " deallocating all chunks in one fast operation."]
    #[doc = ""]
    #[doc = " This function makes it possible for the embedder to allocate"]
    #[doc = " temporary data in the VMs zone allocator."]
    #[doc = ""]
    #[doc = " Zone allocation is possible:"]
    #[doc = "   1. when inside a scope where local handles can be allocated"]
    #[doc = "   2. when processing a message from a native port in a native port"]
    #[doc = "      handler"]
    #[doc = ""]
    #[doc = " All the memory allocated this way will be reclaimed either on the"]
    #[doc = " next call to Dart_ExitScope or when the native port handler exits."]
    #[doc = ""]
    #[doc = " \\param size Size of the memory to allocate."]
    #[doc = ""]
    #[doc = " \\return A pointer to the allocated memory. NULL if allocation"]
    #[doc = "   failed. Failure might due to is no current VM zone."]
    pub fn Dart_ScopeAllocate(size: isize) -> *mut u8;
}

extern "C" {
    #[doc = " Returns the null object."]
    #[doc = ""]
    #[doc = " \\return A handle to the null object."]
    pub fn Dart_Null() -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the empty string object."]
    #[doc = ""]
    #[doc = " \\return A handle to the empty string object."]
    pub fn Dart_EmptyString() -> Dart_Handle;
}

extern "C" {
    #[doc = " Is this object null?"]
    pub fn Dart_IsNull(object: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Checks if the two objects are equal."]
    #[doc = ""]
    #[doc = " The result of the comparison is returned through the 'equal'"]
    #[doc = " parameter. The return value itself is used to indicate success or"]
    #[doc = " failure, not equality."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param obj1 An object to be compared."]
    #[doc = " \\param obj2 An object to be compared."]
    #[doc = " \\param equal Returns the result of the equality comparison."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the comparison."]
    pub fn Dart_ObjectEquals(obj1: Dart_Handle, obj2: Dart_Handle, equal: *mut bool)
        -> Dart_Handle;
}

extern "C" {
    #[doc = " Is this object an instance of some type?"]
    #[doc = ""]
    #[doc = " The result of the test is returned through the 'instanceof' parameter."]
    #[doc = " The return value itself is used to indicate success or failure."]
    #[doc = ""]
    #[doc = " \\param object An object."]
    #[doc = " \\param type A type."]
    #[doc = " \\param instanceof Return true if 'object' is an instance of type 'type'."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_ObjectIsType(
        object: Dart_Handle,
        type_: Dart_Handle,
        instanceof: *mut bool,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Query object type."]
    #[doc = ""]
    #[doc = " \\param object Some Object."]
    #[doc = ""]
    #[doc = " \\return true if Object is of the specified type."]
    pub fn Dart_IsInstance(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsNumber(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsInteger(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsDouble(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsBoolean(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsString(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsStringLatin1(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsExternalString(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsList(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsMap(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsLibrary(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsType(handle: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsFunction(handle: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsVariable(handle: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsTypeVariable(handle: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsClosure(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsTypedData(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsByteBuffer(object: Dart_Handle) -> bool;
}

extern "C" {
    pub fn Dart_IsFuture(object: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Gets the type of a Dart language object."]
    #[doc = ""]
    #[doc = " \\param instance Some Dart object."]
    #[doc = ""]
    #[doc = " \\return If no error occurs, the type is returned. Otherwise an"]
    #[doc = "   error handle is returned."]
    pub fn Dart_InstanceGetType(instance: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the name for the provided class type."]
    #[doc = ""]
    #[doc = " \\return A valid string handle if no error occurs during the"]
    #[doc = "   operation."]
    pub fn Dart_ClassName(cls_type: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the name for the provided function or method."]
    #[doc = ""]
    #[doc = " \\return A valid string handle if no error occurs during the"]
    #[doc = "   operation."]
    pub fn Dart_FunctionName(function: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a handle to the owner of a function."]
    #[doc = ""]
    #[doc = " The owner of an instance method or a static method is its defining"]
    #[doc = " class. The owner of a top-level function is its defining"]
    #[doc = " library. The owner of the function of a non-implicit closure is the"]
    #[doc = " function of the method or closure that defines the non-implicit"]
    #[doc = " closure."]
    #[doc = ""]
    #[doc = " \\return A valid handle to the owner of the function, or an error"]
    #[doc = "   handle if the argument is not a valid handle to a function."]
    pub fn Dart_FunctionOwner(function: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Determines whether a function handle referes to a static function"]
    #[doc = " of method."]
    #[doc = ""]
    #[doc = " For the purposes of the embedding API, a top-level function is"]
    #[doc = " implicitly declared static."]
    #[doc = ""]
    #[doc = " \\param function A handle to a function or method declaration."]
    #[doc = " \\param is_static Returns whether the function or method is declared static."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_FunctionIsStatic(function: Dart_Handle, is_static: *mut bool) -> Dart_Handle;
}

extern "C" {
    #[doc = " Is this object a closure resulting from a tear-off (closurized method)?"]
    #[doc = ""]
    #[doc = " Returns true for closures produced when an ordinary method is accessed"]
    #[doc = " through a getter call. Returns false otherwise, in particular for closures"]
    #[doc = " produced from local function declarations."]
    #[doc = ""]
    #[doc = " \\param object Some Object."]
    #[doc = ""]
    #[doc = " \\return true if Object is a tear-off."]
    pub fn Dart_IsTearOff(object: Dart_Handle) -> bool;
}

extern "C" {
    #[doc = " Retrieves the function of a closure."]
    #[doc = ""]
    #[doc = " \\return A handle to the function of the closure, or an error handle if the"]
    #[doc = "   argument is not a closure."]
    pub fn Dart_ClosureFunction(closure: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns a handle to the library which contains class."]
    #[doc = ""]
    #[doc = " \\return A valid handle to the library with owns class, null if the class"]
    #[doc = "   has no library or an error handle if the argument is not a valid handle"]
    #[doc = "   to a class type."]
    pub fn Dart_ClassLibrary(cls_type: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Does this Integer fit into a 64-bit signed integer?"]
    #[doc = ""]
    #[doc = " \\param integer An integer."]
    #[doc = " \\param fits Returns true if the integer fits into a 64-bit signed integer."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_IntegerFitsIntoInt64(integer: Dart_Handle, fits: *mut bool) -> Dart_Handle;
}

extern "C" {
    #[doc = " Does this Integer fit into a 64-bit unsigned integer?"]
    #[doc = ""]
    #[doc = " \\param integer An integer."]
    #[doc = " \\param fits Returns true if the integer fits into a 64-bit unsigned integer."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs during the operation."]
    pub fn Dart_IntegerFitsIntoUint64(integer: Dart_Handle, fits: *mut bool) -> Dart_Handle;
}
